<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BTController</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">Email_hint</string>
    <string name="send_button_text">send message</string>
    <string name="changing_fragments">设置菜单</string>
    <string name="main_menu_messaging">短信</string>
    <string name="main_menu_phone">电话</string>
    <string name="main_menu_map">地图</string>
    <string name="main_menu_settings">设置</string>
    <string name="main_menu_weibo">微博</string>
    <string name="main_menu_help">帮助</string>
    <string name="viponly">仅对VIP开放！</string>

    <string name="loading">载入中...</string><string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_logout_success">已注销</string>
    <string name="weibosdk_demo_logout_failed">注销失败</string>
    
    <string name="globalsettingserializablename">GlobalSetting</string>
    
    <string name="setting_menu_messaging">短信</string>
    <string name="setting_menu_weather">天气</string>
    <string name="setting_menu_stock">股票</string>
    <string name="setting_menu_weibo">微博</string>
    <string name="setting_menu_bluetooth">蓝牙设置</string>
    <string name="setting_send">发送配置</string>
    
    
    <string name="navibar_title">路径规划</string>
    <string name="navi_car">驾车</string>
    <string name="navi_foot">步行</string>
    <string name="navi_start">"起    点"</string>
    <string name="navi_middle">途经点</string>
    <string name="navi_end">"终    点"</string>
    <string name="navi_strategy">"策    略"</string>
    <string name="navi_route">路径规划</string>
    <string name="navi_navi">模拟导航</string>
    <string name="start_navi_navi">导航</string>
    <string name="navi_strategy_speed">速度最快</string>
    <string name="navi_strategy_cost">避免收费</string>
    <string name="navi_strategy_distance">距离最短</string>
    <string name="navi_strategy_nohighway">不走高速快速路</string>
    <string name="navi_strategy_timenojam">时间最短且躲避拥堵</string>
    <string name="navi_strategy_costnojam">避免收费且躲避拥堵</string>
    
    <string name="theme_blue">经典蓝</string>
    <string name="theme_pink">可爱粉</string>
    <string name="theme_white">简约白</string>

    <string name="setting">设置</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="yes">"  是  "</string>
    <string name="no">"  否  "</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="daynightmode">"昼夜模式    "</string>                                                                                  
    <string name="deviationrecalculation">"偏航重算    "</string>
    <string name="jamrecalculation">"拥堵重算    "</string>
    <string name="trafficbroadcast">"交通播报    "</string>
    <string name="camerabroadcast">摄像头播报</string>
    <string name="screenon">"屏幕常亮    "</string>
    <string name="routeshow">线路展示</string>
    <string name="tapmap">点击地图设置</string>
    <string name="starttapmap">我的位置（可点击地图设置）</string>
    <string name="walkdescription">步行状态不可用</string>
    <string name="routeinfo">全程   --公里/--分钟    收费 --元</string>
     <string name="routeinfo_1">全程 </string>
      <string name="routeinfo_2">公里/</string>
       <string name="routeinfo_3">"分钟    收费"</string>
       <string name="routeinfo_4">元</string>
       <string name="routeinfo_default">--</string>
    <string name="app_id">输入您讯飞的appid</string>
    <string name="mypoistion">我的位置</string>
    <string name="mappoistion">地图点选</string>
    <string name="positioninfo">位置信息</string>

    <string-array name="preference_values_tts_role">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>vixy</item>
        <item>vixq</item>
        <item>vixf</item>
        <item>vixm</item>
        <item>vixl</item>
        <item>vixr</item>
        <item>vixyun</item>
        <item>vixk</item>
        <item>vixqa</item>
        <item>vixying</item>
        <item>vixx</item>
        <item>vinn</item>
        <item>vils</item>
    </string-array>

    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
   
    <!-- offlinemap -->   
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="around_search">附近</string>
    <string name="poiaroundsearch">附近</string>    

    <string name="setting_menu_weather_city_list">城市列表</string>
    <string name="setting_menu_weather_add_city">添加城市</string>
    <string name="setting_menu_weather_delete_city">删除城市</string>
    <string name="setting_menu_weathr_dialog_hint_enter_city_name">请输入城市名</string>
    <string name="setting_weather_city_add_dialog_title">新建城市</string>
    <string name="weibosdk_access_token_is_empty">Access Token不存在，请先登录</string>
    
    <string name="starting_call_listener">电话监听打开中....</string>
    <string name="starting_sms_listener">短信监听打开中....</string>
    <string name="main_service_started">主服务已运行</string>
    <string name="main_service_stopped">主服务已停止</string>
    <string name="main_service_ack_normal">显示端通信正常</string>
    <string name="main_service_ack_none">无法连接显示端</string>
    
    <string name="setting_menu_bt_display_status">显示端状态</string>
    <string name="setting_menu_bt_display_status_connected">已连接</string>
    <string name="setting_menu_bt_display_status_disconnected">未连接</string>
    <string name="setting_menu_bt_display_name">显示设备名</string>
    <string name="setting_menu_bt_paired_devices">已配对蓝牙设备</string>
    <string name="setting_menu_bt_not_supported">没有检测到系统蓝牙设备</string>
    <string name="setting_menu_bt_disabled">蓝牙设备被禁用</string>
    <string name="setting_menu_bt_not_connected">显示设备没有连接</string>
    <string name="setting_menu_bt_pair_with_selected_device">要与该设备配对吗？</string>
    
    

</resources>
