<?xml version="1.0" encoding="utf-8"?>
<!-- This is the debug layout for top level setting. This file originates from V0.1's global
     settings. This layout should be deprecated in future.
     PS: I have no idea why putting comments before line 1 will cause syntax error, so put it here.
     -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
	    <CheckBox android:id="@+id/setting_checkbox_weather"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/setting_menu_weather" />
	
	    <CheckBox android:id="@+id/setting_checkbox_stock"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/setting_menu_stock" />
	
	    <CheckBox android:id="@+id/setting_checkbox_messaging"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/setting_menu_messaging" />
    </LinearLayout>

    <Button android:id="@+id/setting_button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_send" />

</RelativeLayout>
